# Smart-Robot

./: CMakeLists.txt  README.md  sdkconfig
components/dev_bsp/: CMakeLists.txt  esp32s3_bsp_board.c  esp32s3_bsp_board.h  esp32s3_bsp_camera.c  esp32s3_bsp_display.c  esp32s3_bsp_mic.c  esp32s3_bsp_sdcard.c  esp32s3_bsp_speaker.c
main/: CMakeLists.txt  idf_component.yml  main.c
main/app/: app_audio.c  app_audio.h  app_chat.c  app_chat.h  app_network.c  app_network.h  app_sr.c  app_sr.h  app_tts.c  app_tts.h  conf.h  data_handle.c  data_handle.h
main/ui/: app_display.c  app_display.h
sdcard/audio/: echo_cn_wake.pcm  echo_end.pcm
tools/: numsFrame.py  oneFrame.py
